<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <!-- Add guideline to align imageView to. -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/textProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile"
        android:textAppearance="@style/text_24_dp_bold_center_black"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/profile" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="@dimen/margin_10_sp"
        android:layout_marginTop="48dp"
        android:background="@drawable/circle_img"
        android:contentDescription="@string/resource_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/greyLight"
        app:strokeWidth="0dp" />


    <TextView
        android:id="@+id/textProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textAppearance="@style/text_32_dp_bold_center_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/profile_name" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/text_16_dp_center_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textProfileName"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20_sp"
        android:textAppearance="@style/text_16_bold_dp_center_black"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/textViewFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20_sp"
        android:textAppearance="@style/text_16_dp_center_black"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail"
        tools:text="@string/followers" />

    <TextView
        android:id="@+id/textViewFollowings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30_sp"
        android:layout_marginTop="@dimen/margin_20_sp"
        android:textAppearance="@style/text_16_dp_center_black"
        app:layout_constraintStart_toEndOf="@+id/textViewFollowers"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail"
        tools:text="@string/following" />


</androidx.constraintlayout.widget.ConstraintLayout>