<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="164dp"
    android:layout_margin="@dimen/margin_05_sp"
    android:background="@drawable/pinned_list_raw_back_ground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle_img"
        android:contentDescription="@string/resource_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:textAppearance="@style/text_16_dp_center_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:text="@string/profile_name" />

    <TextView
        android:id="@+id/textRepositoryOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/text_16dp_bold_left_center_black"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:text="@string/repository_name" />

    <TextView
        android:id="@+id/textRepositoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textAppearance="@style/text_16dp_left_center_black"
        app:layout_constraintStart_toStartOf="@+id/textRepositoryOwner"
        app:layout_constraintTop_toBottomOf="@id/textRepositoryOwner"
        tools:text="@string/repository_description" />


    <ImageView
        android:id="@+id/starColor"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/margin_25_sp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintEnd_toStartOf="@+id/textViewStars"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/textRepositoryDescription"
        app:layout_constraintStart_toStartOf="@+id/textRepositoryDescription"
        app:layout_constraintTop_toTopOf="@+id/textRepositoryDescription" />

    <TextView
        android:id="@+id/textViewStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10_sp"
        android:layout_marginTop="@dimen/margin_30_sp"
        android:clickable="true"
        android:focusable="true"
        android:text="100"
        android:textAppearance="@style/text_16dp_left_center_black"
        app:layout_constraintEnd_toStartOf="@+id/textLanguageColor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/starColor"
        app:layout_constraintTop_toTopOf="@+id/textRepositoryDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/textLanguageColor"
        app:cardElevation = "16dp"
        app:cardCornerRadius = "20dp"
        android:foregroundGravity = "center"
        android:layout_centerInParent = "true"
        android:layout_width = "20dp"
        android:layout_height = "20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="@dimen/margin_30_sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toStartOf="@+id/textLanguage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewStars"
        app:layout_constraintTop_toTopOf="@+id/textRepositoryDescription" />

    <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10_sp"
        android:layout_marginTop="@dimen/margin_30_sp"
        android:text="Java"
        android:textAppearance="@style/text_16dp_left_center_black"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textLanguageColor"
        app:layout_constraintTop_toTopOf="@+id/textRepositoryDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>